infrastructure/security/vault/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: security
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - vault.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8200
          weight: 1
          group: ""
          kind: Service
